--- a/style.css
+++ b/style.css
@@ -7,7 +7,77 @@
 .root {
     max-width: 1440px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   } 
 
 
+  .wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+
+  .logo {
+    width: 216px;
+    height: 31px;
+    display: flex;
+    font-family: 'Magra';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 39px;
+    color: #FFFFFF;
+  }
+
+
+  .nav-link, .login {
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21px;
+    color: #FFFFFF;
+  }
+
+
+  .header {
+    width: 100%;
+    height: 90px;;
+    background: rgba(242, 120, 92, 0.7);
+    box-shadow: 0px 4px 4px rgba(13, 96, 111, 0.5);
+  }
   
+  .header-travel {
+    margin-left: 6px;
+  }
+
+  .header-list {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    width: 527px;
+    margin: 10px 196px 0 158px;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+
+  .login {
+    width: 103px;
+    height: 41px;
+    background: #0D606F;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border-radius: 10px;
+    padding: 0;
+    border: none;
+    text-align: center;
+  }
+
+  .header-flex {
+    margin-top: 25px;
+    display: flex;
+    justify-content: space-between;
+  }
