--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@
     margin: 0 auto;
   }
 
+  
+/* -------------------Header strat----------------------------- */
+
 
   .logo {
     width: 216px;
@@ -81,3 +84,89 @@
     display: flex;
     justify-content: space-between;
   }
+
+    /* --------------------Header END--------------------------------- */
+
+
+  /* ----------------------------  Section preview strat-------------------------------------- */
+
+.preview {
+width: 892px;
+height: 389px;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+margin-top: 32px;
+}
+
+.preview-h, .preview-p {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    color: #FFFFFF;
+}
+
+
+.preview-h {
+font-size: 80px;
+line-height: 96px;
+}
+
+.preview-p {
+font-family: 'Aleo';
+font-style: italic;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+color: #FFFFFF;
+margin-bottom: 11px;
+}
+
+
+.form-search, .form-search::placeholder {
+width: 100%;
+font-family: 'Aleo';
+font-style: italic;
+font-weight: 400;
+font-size: 24px;
+line-height: 29px;
+color: #F2785C;
+border: none;
+outline:none;
+background: transparent;
+margin-left: 41px;
+}
+
+.form-button {
+border: none;
+color: #FFFFFF;
+font-family: 'Red Hat Text';
+font-style: normal;
+font-weight: 500;
+font-size: 24px;
+line-height: 32px;
+width: 228px;
+height: 59px;
+background: #0D606F;
+box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+border-radius: 10px;
+margin: 18px;
+padding: 13.5px 32.5px;
+}
+
+
+.preview-form {
+display: flex;
+justify-content: space-between;
+width: 892px;
+height: 95px;
+background: rgba(255, 255, 255, 0.7);
+border-radius: 16px;
+}
+
+
+body{
+    background-image: url(./img/background-1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
