--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-image: url(./img/background-1.jpg);
+    background-repeat: no-repeat;
   } 
 
 
@@ -85,18 +87,18 @@
     justify-content: space-between;
   }
 
-    /* --------------------Header END--------------------------------- */
+    /* ----------------------------------Header END--------------------------------- ------------*/
 
 
   /* ----------------------------  Section preview strat-------------------------------------- */
 
 .preview {
-width: 892px;
-height: 389px;
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-margin-top: 32px;
+  width: 892px;
+  height: 389px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 32px;
 }
 
 .preview-h, .preview-p {
@@ -124,49 +126,110 @@ margin-bottom: 11px;
 
 
 .form-search, .form-search::placeholder {
-width: 100%;
-font-family: 'Aleo';
-font-style: italic;
-font-weight: 400;
-font-size: 24px;
-line-height: 29px;
-color: #F2785C;
-border: none;
-outline:none;
-background: transparent;
-margin-left: 41px;
+  width: 100%;
+  font-family: 'Aleo';
+  font-style: italic;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  color: #F2785C;
+  border: none;
+  outline:none;
+  background: transparent;
+  margin-left: 41px;
 }
 
 .form-button {
-border: none;
-color: #FFFFFF;
-font-family: 'Red Hat Text';
-font-style: normal;
-font-weight: 500;
-font-size: 24px;
-line-height: 32px;
-width: 228px;
-height: 59px;
-background: #0D606F;
-box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
-border-radius: 10px;
-margin: 18px;
-padding: 13.5px 32.5px;
+  border: none;
+  color: #FFFFFF;
+  font-family: 'Red Hat Text';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 32px;
+  width: 228px;
+  height: 59px;
+  background: #0D606F;
+  box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+  border-radius: 10px;
+  margin: 18px;
+  padding: 13.5px 32.5px;
 }
 
 
 .preview-form {
-display: flex;
-justify-content: space-between;
-width: 892px;
-height: 95px;
-background: rgba(255, 255, 255, 0.7);
-border-radius: 16px;
+  display: flex;
+  justify-content: space-between;
+  width: 892px;
+  height: 95px;
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 16px;
 }
 
 
-body{
-    background-image: url(./img/background-1.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
+ /* ----------------------------  Section preview end-------------------------------------- */
+
+
+ /* ----------------------------  Section steps start-------------------------------------- */
+
+
+.steps {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 333px;
 }
+
+
+ h2 {
+  font-family: 'Red Hat Text';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 53px;
+  color: #F2785C;
+   }
+
+ .steps-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #F2785C;
+  border-radius: 16px;
+  width: 100px;
+  height: 100px
+ }
+
+
+.steps-p {
+  font-family: 'Aleo';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #0D606F;
+}
+
+
+.steps-block {
+  display: flex;
+  justify-content: space-between;
+  width: 1177px;
+  height: 154px;
+  margin-top: 40px;
+}
+
+
+.steps-item, .steps-schedule {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.steps-schedule {
+  margin-left: 69px;
+ }
+
