--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     justify-content: space-between;
     background-image: url(./img/background-1.jpg);
     background-repeat: no-repeat;
+    overflow: hidden;
   } 
 
 
@@ -232,4 +233,114 @@ margin-bottom: 11px;
 .steps-schedule {
   margin-left: 69px;
  }
+
+ /* ----------------------------  Section steps end-------------------------------------- */
+
+/* ----------------------------  Section destinations start-------------------------------------- */
+
+.destinations {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 1042px;
+  margin-top: 97px;
+}
+
+.dest-block {
+  display: flex;
+  justify-content: space-between;
+  width: 2520px;
+  height: 800px;
+  margin-top: 46px;
+}
+
+
+.spain {
+  width: 800px;
+  height: 800px;
+  background-image: url(/img/Spain.jpg);
+  border-radius: 16px;
+}
+
+.usa {
+  width: 800px;
+  height: 800px;
+  background-image: url(/img/USA.jpg);
+  border-radius: 16px;
+}
+
+.japan {
+  width: 800px;
+  height: 800px;
+  background-image: url(/img/Japan.jpg);
+  border-radius: 16px;
+}
+
+
+.dest-p {
+  font-family: 'Red Hat Text';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 42px;
+  color: #FFFFFF;
+  margin-left: 15px;
+  margin-bottom: 40px;
+}
+
+
+.spain, .japan, .usa {
+  display: flex;
+  align-items: flex-end;
+}
+
+
+.slider-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 80px;
+  height: 20px;
+  margin-top: 24px;
+}
+
+.slider-buttons :nth-child(2) {
+  background: rgba(242, 120, 92, 1);
+}
+
+.circle {
+  border-radius: 80%;
+  width: 20px;
+  height: 20px;
+  background: rgba(242, 120, 92, 0.5);
+}
+
+
+
+.find {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align:center;
+  border: none;
+  width: 228px;
+  height: 59px;
+  font-family: 'Red Hat Text';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 32px;
+  color: #FFFFFF;
+  background: #0D606F;
+  box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+  border-radius: 10px;
+  border: none;
+  margin-top: 40px;
+}
+
+.find img {
+  margin-right: 7px;
+  margin-top: 9px;
+}
+
+
 
